third_party/move/move-compiler/tests/move_check/parser/break_with_value.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/break_with_value.move:3:22
  │
3 │         loop { break 0 };
  │                      ^
  │                      │
  │                      Unexpected '0'
  │                      Expected the end of an expression
  │
  = 'break' with a value is not yet supported

