third_party/move/move-compiler/tests/move_check/parser/break_with_value.move
module 0x42::M {
    fun t(cond: bool) {
        loop { break 0 };
    }
}
